@@ -8,7 +8,7 @@ Este microservicio forma parte de la arquitectura distribuida de Iron Library y 
 
 ## 🚀 Características
 
-- ✅ **CRUD completo** de préstamos con validaciones
+- ✅ **CRUD completo** de préstamos con validaciones robustas
 - ✅ **Integración con microservicios** (User Service y Book Service)
 - ✅ **Gestión de estados** (activo, devuelto, vencido, cancelado)
 - ✅ **Control de fechas** y vencimientos automáticos
@@ -18,6 +18,8 @@ Este microservicio forma parte de la arquitectura distribuida de Iron Library y 
 - ✅ **Búsquedas especializadas** (vencidos, próximos a vencer)
 - ✅ **API REST** documentada con endpoints específicos
 - ✅ **Comunicación con Feign Clients** para validaciones
+- ✅ **Manejo de excepciones** centralizado
+- ✅ **Testing comprehensivo** con múltiples estrategias
 
 ## 🛠️ Stack Tecnológico
 
@@ -27,10 +29,11 @@ Este microservicio forma parte de la arquitectura distribuida de Iron Library y 
 - **Spring Cloud Netflix Eureka Client** - Service Discovery
 - **Spring Cloud OpenFeign** - Comunicación entre servicios
 - **MySQL** - Base de datos relacional
-- **Bean Validation** - Validaciones de entrada
+- **H2** - Base de datos en memoria para testing
+- **TestContainers** - Tests de integración con contenedores
 - **Lombok** - Reducción de código boilerplate
-- **JUnit 5** - Testing unitario
-- **Mockito** - Mocking para tests
+- **JUnit 5** - Testing unitario moderno
+- **Mockito** - Mocking avanzado para tests
 
 ## 📡 Endpoints Principales
 
@@ -38,21 +41,21 @@ Este microservicio forma parte de la arquitectura distribuida de Iron Library y 
 
 | Método | Endpoint | Descripción |
 |--------|----------|-------------|
-| GET | `/api/loans` | Obtener todos los préstamos |
-| GET | `/api/loans/{id}` | Obtener préstamo por ID |
-| GET | `/api/loans/user/{userId}` | Obtener préstamos por usuario |
-| GET | `/api/loans/user/{userId}/active` | Préstamos activos de un usuario |
-| GET | `/api/loans/book/{bookId}` | Obtener préstamos por libro |
-| GET | `/api/loans/overdue` | Obtener préstamos vencidos |
-| GET | `/api/loans/due-soon?days=3` | Préstamos que vencen pronto |
-| GET | `/api/loans/stats` | Estadísticas de préstamos |
-| POST | `/api/loans` | Crear nuevo préstamo |
-| POST | `/api/loans/quick?userId=1&bookId=1` | Crear préstamo rápido |
-| PUT | `/api/loans/{id}` | Actualizar préstamo completo |
-| PATCH | `/api/loans/{id}/return` | Devolver libro |
-| PATCH | `/api/loans/{id}/extend?days=7` | Extender préstamo |
-| DELETE | `/api/loans/{id}` | Eliminar préstamo |
-| GET | `/api/loans/health` | Health check del servicio |
+| **GET** | `/api/loans` | Obtener todos los préstamos |
+| **GET** | `/api/loans/{id}` | Obtener préstamo por ID |
+| **GET** | `/api/loans/user/{userId}` | Obtener préstamos por usuario |
+| **GET** | `/api/loans/user/{userId}/active` | Préstamos activos de un usuario |
+| **GET** | `/api/loans/book/{bookId}` | Obtener préstamos por libro |
+| **GET** | `/api/loans/overdue` | Obtener préstamos vencidos |
+| **GET** | `/api/loans/due-soon?days=3` | Préstamos que vencen pronto |
+| **GET** | `/api/loans/stats` | Estadísticas de préstamos |
+| **POST** | `/api/loans` | Crear nuevo préstamo |
+| **POST** | `/api/loans/quick?userId=1&bookId=1` | Crear préstamo rápido |
+| **PUT** | `/api/loans/{id}` | Actualizar préstamo completo |
+| **PATCH** | `/api/loans/{id}/return` | Devolver libro |
+| **PATCH** | `/api/loans/{id}/extend?days=7` | Extender préstamo |
+| **DELETE** | `/api/loans/{id}` | Eliminar préstamo |
+| **GET** | `/api/loans/health` | Health check del servicio |
 
 ## 📊 Modelo de Datos
 
@@ -60,6 +63,9 @@ Este microservicio forma parte de la arquitectura distribuida de Iron Library y 
 ```java
 @Entity
 @Table(name = "loans")
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
 public class Loan {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -81,25 +87,31 @@ public class Loan {
     private LocalDate returnDate;
     
     @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
+    @Column(name = "status", nullable = false, length = 20)
     private LoanStatus status;
     
-    @Column(length = 500)
+    @Column(name = "notes", length = 500)
     private String notes;
     
     // Métodos de negocio
     public boolean isOverdue() {
         return status == LoanStatus.ACTIVE && 
+               dueDate != null &&
                LocalDate.now().isAfter(dueDate);
     }
     
     public long getDaysOverdue() {
-        if (!isOverdue()) return 0;
+        if (!isOverdue() || dueDate == null) return 0;
         return LocalDate.now().toEpochDay() - dueDate.toEpochDay();
     }
     
     public boolean canBeReturned() {
         return status == LoanStatus.ACTIVE || status == LoanStatus.OVERDUE;
+    }
+    
+    public long getLoanDurationDays() {
+        if (dueDate == null || loanDate == null) return 0;
+        return dueDate.toEpochDay() - loanDate.toEpochDay();
     }
 }
 ```
@@ -129,6 +141,10 @@ public enum LoanStatus {
 
 ### Variables de Entorno
 ```properties
+# Aplicación
+spring.application.name=loan-service
+server.port=8083
+
 # Base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/loan_service
 spring.datasource.username=root
@@ -139,12 +155,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Puerto del servicio
-server.port=8083
-
-# Eureka
+# Eureka Service Discovery
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.application.name=loan-service
 ```
 
 ### Configuración de Base de Datos
@@ -170,7 +182,7 @@ USE loan_service;
 ### Pasos de Instalación
 ```bash
 # Clonar el repositorio
-git clone https://github.com/IronLibray/loan-service.git
+git clone https://github.com/IronLibrary/loan-service.git
 cd loan-service
 
 # Configurar base de datos
@@ -190,6 +202,9 @@ curl http://localhost:8083/api/loans/health
 
 # Verificar registro en Eureka
 # Ir a http://localhost:8761 y verificar que aparece LOAN-SERVICE
+
+# Probar endpoint básico
+curl http://localhost:8083/api/loans
 ```
 
 ## 🧪 Testing
@@ -204,14 +219,22 @@ curl http://localhost:8083/api/loans/health
 
 # Solo tests de integración
 ./mvnw test -Dtest="*IntegrationTest"
+
+# Tests end-to-end
+./mvnw test -Dtest="*E2ETest"
+
+# Tests con perfiles específicos
+./mvnw test -Dspring.profiles.active=test
 ```
 
 ### Cobertura de Tests
 - ✅ **LoanController** - Tests con MockMvc (@WebMvcTest)
 - ✅ **LoanService** - Tests unitarios con @Mock
 - ✅ **LoanRepository** - Tests de integración con @DataJpaTest
-- ✅ **Feign Clients** - Tests de comunicación
-- ✅ **Validaciones** - Tests de reglas de negocio
+- ✅ **Feign Clients** - Tests de comunicación entre servicios
+- ✅ **Integration Tests** - Tests de integración completos
+- ✅ **E2E Tests** - Tests end-to-end con configuración manual
+- ✅ **Business Logic** - Tests de reglas de negocio
 
 ## 🔗 Comunicación con Otros Servicios
 
@@ -248,12 +271,20 @@ public interface BookServiceClient {
 ### DTOs para Comunicación
 ```java
 // UserDto - Información del usuario
+@Data
 public class UserDto {
     private Long id;
     private String name;
     private String email;
     private String membershipType;
     private Boolean isActive;
+    private LocalDate registrationDate;
+    private String phone;
+    private String address;
+    
+    public boolean canBorrowBooks() {
+        return isActive != null && isActive && membershipType != null;
+    }
     
     public int getMaxBooksAllowed() {
         return switch (membershipType) {
@@ -275,11 +306,14 @@ public class UserDto {
 }
 
 // BookDto - Información del libro
+@Data
 public class BookDto {
     private Long id;
     private String title;
     private String author;
     private String isbn;
+    private String category;
+    private Integer totalCopies;
     private Integer availableCopies;
     
     public boolean isAvailable() {
@@ -300,19 +334,55 @@ public class BookDto {
 | **Duración por membresía** | BASIC: 14 días, PREMIUM: 30 días, STUDENT: 21 días |
 
 ### Flujo de Creación de Préstamo
-1. **Validar usuario** → Verificar estado activo y límites
-2. **Validar libro** → Verificar disponibilidad
-3. **Verificar límites** → Comprobar préstamos activos vs máximo permitido
-4. **Verificar duplicados** → Usuario no puede tener el mismo libro
-5. **Crear préstamo** → Establecer fechas según membresía
-6. **Actualizar inventario** → Reducir copias disponibles del libro
-7. **Guardar registro** → Persistir en base de datos
+```java
+public Loan createLoan(Long userId, Long bookId, String notes) {
+    // 1. Validar usuario
+    UserDto user = validateUser(userId);
+    
+    // 2. Validar libro
+    BookDto book = validateBook(bookId);
+    
+    // 3. Verificar límites del usuario
+    validateUserLimits(userId, user);
+    
+    // 4. Verificar que no tenga ya este libro
+    if (loanRepository.hasActiveLoanForBook(userId, bookId)) {
+        throw new IllegalArgumentException("El usuario ya tiene este libro prestado");
+    }
+    
+    // 5. Crear el préstamo
+    LocalDate loanDate = LocalDate.now();
+    LocalDate dueDate = loanDate.plusDays(user.getLoanDurationDays());
+    Loan loan = new Loan(userId, bookId, loanDate, dueDate, notes);
+    
+    // 6. Actualizar disponibilidad del libro
+    bookServiceClient.updateAvailability(bookId, -1);
+    
+    // 7. Guardar y retornar
+    return loanRepository.save(loan);
+}
+```
 
 ### Flujo de Devolución
-1. **Buscar préstamo** → Verificar que existe y puede devolverse
-2. **Actualizar estado** → Cambiar a RETURNED y establecer fecha
-3. **Restaurar inventario** → Aumentar copias disponibles del libro
-4. **Guardar cambios** → Persistir actualización
+```java
+public Loan returnBook(Long loanId) {
+    Loan loan = findLoanById(loanId);
+    
+    // Verificar que puede devolverse
+    if (!loan.canBeReturned()) {
+        throw new LoanAlreadyReturnedException("El préstamo ya fue devuelto o cancelado");
+    }
+    
+    // Actualizar el préstamo
+    loan.setReturnDate(LocalDate.now());
+    loan.setStatus(LoanStatus.RETURNED);
+    
+    // Restaurar inventario del libro
+    bookServiceClient.updateAvailability(loan.getBookId(), 1);
+    
+    return loanRepository.save(loan);
+}
+```
 
 ### Estados de Préstamo
 - **ACTIVE** → Libro prestado, dentro del plazo
@@ -344,8 +414,8 @@ curl -X POST "http://localhost:8083/api/loans/quick?userId=1&bookId=1"
   "id": 1,
   "userId": 1,
   "bookId": 1,
-  "loanDate": "2025-01-27",
-  "dueDate": "2025-02-26",
+  "loanDate": "2025-01-29",
+  "dueDate": "2025-02-28",
   "returnDate": null,
   "status": "ACTIVE",
   "notes": "Préstamo para estudio de arquitectura"
@@ -362,9 +432,20 @@ curl -X PATCH http://localhost:8083/api/loans/1/return
 curl -X PATCH "http://localhost:8083/api/loans/1/extend?days=7"
 ```
 
-### Obtener Préstamos Vencidos
+### Consultas Especializadas
 ```bash
+# Préstamos vencidos
 curl http://localhost:8083/api/loans/overdue
+
+# Préstamos que vencen pronto
+curl "http://localhost:8083/api/loans/due-soon?days=3"
+
+# Préstamos por usuario
+curl http://localhost:8083/api/loans/user/1
+curl http://localhost:8083/api/loans/user/1/active
+
+# Préstamos por libro
+curl http://localhost:8083/api/loans/book/1
 ```
 
 ### Obtener Estadísticas
@@ -382,18 +463,7 @@ curl http://localhost:8083/api/loans/stats
 }
 ```
 
-### Buscar Préstamos por Usuario
-```bash
-curl http://localhost:8083/api/loans/user/1
-curl http://localhost:8083/api/loans/user/1/active
-```
-
-### Buscar Préstamos que Vencen Pronto
-```bash
-curl "http://localhost:8083/api/loans/due-soon?days=3"
-```
-
-## 🔒 Validaciones y Excepciones
+## 🔒 Validaciones y Manejo de Errores
 
 ### Validaciones de Entrada
 - **UserId**: Debe existir y ser válido
@@ -416,17 +486,41 @@ public class LoanNotFoundException extends RuntimeException
 public class LoanAlreadyReturnedException extends RuntimeException
 ```
 
-### Manejo de Errores
+### Manejo de Errores HTTP
 - **400 Bad Request**: Datos de entrada inválidos
 - **403 Forbidden**: Usuario no puede pedir prestado
 - **404 Not Found**: Préstamo/Usuario/Libro no encontrado
 - **409 Conflict**: Libro no disponible o ya prestado al usuario
 - **503 Service Unavailable**: Error comunicando con otros servicios
 
+### Manejo de Errores de Feign
+```java
+@ExceptionHandler(FeignException.class)
+public ResponseEntity<ErrorResponse> handleFeignException(FeignException ex, WebRequest request) {
+    String message = "Error comunicando con otro servicio";
+    HttpStatus status = HttpStatus.SERVICE_UNAVAILABLE;
+    
+    if (ex.status() == 404) {
+        message = "Recurso no encontrado en servicio externo";
+        status = HttpStatus.NOT_FOUND;
+    } else if (ex.status() == 409) {
+        message = "Conflicto con recurso en servicio externo";
+        status = HttpStatus.CONFLICT;
+    }
+    
+    ErrorResponse error = new ErrorResponse(
+        status.value(), message, LocalDateTime.now(),
+        request.getDescription(false).replace("uri=", "")
+    );
+    return ResponseEntity.status(status).body(error);
+}
+```
+
 ## 🔍 Búsquedas Avanzadas
 
 ### Repositorio Especializado
 ```java
+@Repository
 public interface LoanRepository extends JpaRepository<Loan, Long> {
     
     // Préstamos por usuario
@@ -450,10 +544,14 @@ public interface LoanRepository extends JpaRepository<Loan, Long> {
     // Verificar si usuario tiene préstamo activo del libro
     @Query("SELECT COUNT(l) > 0 FROM Loan l WHERE l.userId = :userId AND l.bookId = :bookId AND l.status = 'ACTIVE'")
     boolean hasActiveLoanForBook(@Param("userId") Long userId, @Param("bookId") Long bookId);
+    
+    // Estadísticas agrupadas por estado
+    @Query("SELECT l.status, COUNT(l) FROM Loan l GROUP BY l.status")
+    List<Object[]> getLoanStatistics();
 }
 ```
 
-### Consultas Especializadas
+### Consultas Dinámicas
 ```bash
 # Préstamos por rango de fechas
 GET /api/loans?startDate=2025-01-01&endDate=2025-01-31
@@ -481,6 +579,7 @@ public void updateOverdueLoans() {
             loanRepository.save(loan);
         }
     });
+    log.info("Actualizados {} préstamos vencidos", overdueLoans.size());
 }
 ```
 
@@ -503,36 +602,31 @@ public Loan extendLoan(Long loanId, int days) {
 }
 ```
 
-### Integración con Circuit Breaker (Futura)
+### Servicios de Estadísticas
 ```java
-@CircuitBreaker(name = "user-service", fallbackMethod = "fallbackValidateUser")
-public UserDto validateUser(Long userId) {
-    return userServiceClient.getUserById(userId);
-}
-
-public UserDto fallbackValidateUser(Long userId, Exception ex) {
-    // Implementar lógica de fallback
-    throw new UserNotValidException("Servicio de usuarios no disponible");
+public LoanStatistics getLoanStatistics() {
+    List<Object[]> stats = loanRepository.getLoanStatistics();
+    Map<LoanStatus, Long> statusCounts = stats.stream()
+            .collect(Collectors.toMap(
+                    row -> (LoanStatus) row[0],
+                    row -> (Long) row[1]
+            ));
+    
+    long totalLoans = loanRepository.count();
+    long activeLoans = statusCounts.getOrDefault(LoanStatus.ACTIVE, 0L);
+    long overdueLoans = statusCounts.getOrDefault(LoanStatus.OVERDUE, 0L);
+    long returnedLoans = statusCounts.getOrDefault(LoanStatus.RETURNED, 0L);
+    
+    return new LoanStatistics(totalLoans, activeLoans, overdueLoans, returnedLoans);
 }
 ```
 
-## 📊 Métricas y Monitoreo
+## 📊 Monitoreo y Observabilidad
 
-### Métricas de Negocio
-- Número total de préstamos
-- Préstamos activos vs devueltos
-- Préstamos vencidos
-- Tiempo promedio de préstamo
-- Libros más prestados
-- Usuarios más activos
-
-### Health Checks
+### Health Check
 ```bash
-# Health check básico
 curl http://localhost:8083/api/loans/health
-
-# Health check con dependencias
-curl http://localhost:8083/actuator/health
+# Respuesta: "Loan Service is running on port 8083"
 ```
 
 ### Logging Estructurado
@@ -544,7 +638,7 @@ public class LoanService {
         log.info("Creando préstamo - Usuario: {}, Libro: {}", userId, bookId);
         
         try {
-            // Lógica de negocio
+            Loan savedLoan = loanRepository.save(loan);
             log.info("Préstamo creado exitosamente con ID: {}", savedLoan.getId());
             return savedLoan;
         } catch (Exception e) {
@@ -555,6 +649,14 @@ public class LoanService {
     }
 }
 ```
+
+### Métricas de Negocio
+- Número total de préstamos
+- Préstamos activos vs devueltos
+- Préstamos vencidos
+- Tiempo promedio de préstamo
+- Libros más prestados
+- Usuarios más activos
 
 ## 🛠️ Troubleshooting
 
@@ -593,14 +695,214 @@ curl http://localhost:8081/api/books/health
 - Confirmar que el scheduler está habilitado
 - Revisar logs para errores en actualización automática
 
+### Configuración de Timeouts
+```properties
+# application.properties
+spring.cloud.openfeign.client.config.default.connect-timeout=5000
+spring.cloud.openfeign.client.config.default.read-timeout=5000
+
+# Para testing
+spring.cloud.openfeign.client.config.default.connect-timeout=1000
+spring.cloud.openfeign.client.config.default.read-timeout=1000
+eureka.client.enabled=false
+```
+
+## 🧪 Estrategias de Testing
+
+### Testing Unitario
+```java
+@ExtendWith(MockitoExtension.class)
+class LoanServiceTest {
+    
+    @Mock
+    private LoanRepository loanRepository;
+    
+    @Mock
+    private BookServiceClient bookServiceClient;
+    
+    @Mock
+    private UserServiceClient userServiceClient;
+    
+    @InjectMocks
+    private LoanService loanService;
+    
+    @Test
+    void createLoan_ShouldCreateLoan_WhenValidData() {
+        // Given
+        when(userServiceClient.getUserById(1L)).thenReturn(testUser);
+        when(userServiceClient.validateUser(1L)).thenReturn(true);
+        when(bookServiceClient.getBookById(1L)).thenReturn(testBook);
+        when(bookServiceClient.isBookAvailable(1L)).thenReturn(true);
+        when(loanRepository.save(any(Loan.class))).thenReturn(testLoan);
+        
+        // When
+        Loan result = loanService.createLoan(1L, 1L);
+        
+        // Then
+        assertNotNull(result);
+        verify(bookServiceClient).updateAvailability(1L, -1);
+        verify(loanRepository).save(any(Loan.class));
+    }
+}
+```
+
+### Testing de Integración
+```java
+@SpringBootTest
+@ActiveProfiles("test")
+@Transactional
+class LoanServiceIntegrationTest {
+    
+    @Autowired
+    private LoanRepository loanRepository;
+    
+    @Test
+    void loanRepository_ShouldPersistAndRetrieveLoans() {
+        // Given
+        Loan loan = createTestLoan(1L, 101L, "Préstamo de integración", LoanStatus.ACTIVE);
+        
+        // When
+        Loan savedLoan = loanRepository.save(loan);
+        
+        // Then
+        assertNotNull(savedLoan.getId());
+        assertEquals(LoanStatus.ACTIVE, savedLoan.getStatus());
+        
+        // Verificar que se puede recuperar
+        Loan retrievedLoan = loanRepository.findById(savedLoan.getId()).orElseThrow();
+        assertEquals(savedLoan.getUserId(), retrievedLoan.getUserId());
+    }
+}
+```
+
+### Testing End-to-End
+```java
+@ExtendWith(MockitoExtension.class)
+@ActiveProfiles("test")
+class LoanServiceE2ETest {
+    
+    @Mock
+    private LoanService loanService;
+    
+    private MockMvc mockMvc;
+    private LoanController loanController;
+    
+    @BeforeEach
+    void setUp() {
+        loanController = new LoanController(loanService);
+        mockMvc = MockMvcBuilders.standaloneSetup(loanController)
+                .setControllerAdvice(new GlobalExceptionHandler())
+                .build();
+    }
+    
+    @Test
+    void createLoan_FullFlow_ShouldWork() throws Exception {
+        // Given
+        when(loanService.createLoan(1L, 1L, "Test")).thenReturn(testLoan);
+        
+        // When & Then
+        mockMvc.perform(post("/api/loans")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.userId").value(1))
+                .andExpect(jsonPath("$.bookId").value(1));
+    }
+}
+```
+
+## 📝 Notas de Desarrollo
+
+### Configuraciones de Testing
+```properties
+# application-test.properties
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.cloud.openfeign.client.config.default.connect-timeout=1000
+spring.cloud.openfeign.client.config.default.read-timeout=1000
+eureka.client.enabled=false
+```
+
+### Profiles Disponibles
+- **default** - Configuración para desarrollo local
+- **test** - Configuración para ejecución de tests
+- **prod** - Configuración para producción
+
+### Plugin de Testing Configurado
+```xml
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.2.5</version>
+    <configuration>
+        <argLine>
+            -Xmx1024m
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+        </argLine>
+        <systemPropertyVariables>
+            <spring.profiles.active>test</spring.profiles.active>
+        </systemPropertyVariables>
+    </configuration>
+</plugin>
+```
+
 ## 🚀 Próximas Mejoras
 
 - [ ] **Notificaciones** - Alertas por email/SMS para vencimientos
-- [ ] **Reservas** - Sistema de reservas cuando no hay copias
-- [ ] **Multas** - Cálculo automático de penalizaciones
-- [ ] **Renovaciones automáticas** - Para usuarios premium
-- [ ] **Integración con calendario** - Eventos de vencimiento
-- [ ] **Análisis predictivo** - ML para predecir demanda
-- [ ] **API de terceros** - Integración con sistemas bibliotecarios
-- [ ] **Audit Trail** - Tracking completo de cambios
+- [ ] **Reservas** - Sistema de reservas cuando no hay copias disponibles
+- [ ] **Multas** - Cálculo automático de penalizaciones por retraso
+- [ ] **Renovaciones automáticas** - Para usuarios premium sin penalizaciones
+- [ ] **Integración con calendario** - Eventos de vencimiento en calendario personal
+- [ ] **Análisis predictivo** - ML para predecir demanda de libros
+- [ ] **API de terceros** - Integración con sistemas bibliotecarios externos
+- [ ] **Audit Trail** - Tracking completo de cambios en préstamos
 - [ ] **Bulk operations** - Operaciones masivas de préstamos
+- [ ] **Circuit Breaker** - Resilience4j para tolerancia a fallos
+- [ ] **Cache** - Redis para mejorar performance de consultas frecuentes
+- [ ] **Métricas avanzadas** - Dashboard con Grafana/Prometheus
+
+## 📊 Arquitectura del Sistema
+
+### Flujo de Comunicación
+```
+┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
+│   User Service  │    │  Loan Service   │    │  Book Service   │
+│     :8082       │    │     :8083       │    │     :8081       │
+└─────────────────┘    └─────────────────┘    └─────────────────┘
+         │                       │                       │
+         │  1. Validate User     │                       │
+         │◄──────────────────────│                       │
+         │                       │                       │
+         │                       │  2. Check Availability│
+         │                       │──────────────────────►│
+         │                       │                       │
+         │                       │  3. Update Inventory  │
+         │                       │──────────────────────►│
+         │                       │                       │
+```
+
+### Capas de la Aplicación
+```
+LoanController -> LoanService -> [UserServiceClient, BookServiceClient]
+                     ↓                           ↓
+             LoanRepository                [User Service, Book Service]
+                     ↓
+                 Database
+```
+
+---
+
+## 📞 Soporte
+
+Para reportar bugs o solicitar nuevas características, crear un issue en el repositorio del proyecto.
+
+**Puerto del servicio**: 8083  
+**Base de datos**: loan_service  
+**Nombre en Eureka**: LOAN-SERVICE
+
+### Enlaces Útiles
+- **Eureka Dashboard**: http://localhost:8761
+- **User Service**: http://localhost:8082/api/users/health
+- **Book Service**: http://localhost:8081/api/books/health
+- **Gateway**: http://localhost:8080
